--- a/build.gradle
+++ b/build.gradle
@@ -92,7 +92,7 @@ jar {
     manifest {
         attributes(
                 'MixinConfigs': 'mixins.clientbase.json',
-                'tweakClass': '',
+                'tweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
                 'TweakOrder': 0,
                 'FMLCorePluginContainsFMLMod': 'true',
                 'FMLCorePlugin': 'dev.zihasz.clientbase.mixin.MixinLoader',
